--- a/app.json
+++ b/app.json
@@ -1,140 +1,120 @@
 {
-  "name": "LUCIFER Music",
-  "description": "Lucifer Music ɪs ᴀ ᴛᴇʟᴇɢʀᴀᴍ ᴍᴜsɪᴄ ʙᴏᴛ ᴡɪᴛʜ ᴘʀᴏᴘᴇʀ ғᴜɴᴄᴛɪᴏɴs ᴡʀɪᴛᴛᴇɴ ɪɴ ᴘʏᴛʜᴏɴ ᴡɪᴛʜ ᴘʏʀᴏɢʀᴀᴍ ᴀɴᴅ ᴘʏ-ᴛɢᴄᴀʟʟs.",
-  "logo": "https://telegra.ph/file/83a547c997953a4d75d87.jpg",
-  "keywords": [
-  "python3",
-  "telegram"
-  "bot",
-    "AlexaTgMusic",
+    "name": "Shizuka Music Bot",
+    "description": "Shizuka Is A Telegram Telegram Group Calls streaming bot with some useful features, written in Python with Pyrogram and Py-Tgcalls.",
+    "logo": "https://te.legra.ph/file/798b7275e58d09ac6b095.jpg",
+    "keywords": [
+    "python3",
+    "telegram",
+    "bot",
+    "Shizuka",
     "telegram-music-bot",
     "telegram-bot",
     "pyrogram"
-  ],
-  "stack": "container",
-  "env": {
-    "API_ID": {
-      "description": "Get this value from https://my.telegram.org",
-      "value": "",
-      "required": true
-    },
-    "API_HASH": {
-      "description": "Get this value from https://my.telegram.org",
-      "value": "",
-      "required": true
-    },
-    "BOT_TOKEN": {
-      "description": "A Bot's token from Botfather",
-      "value": "",
-      "required": true
-    },
-    "DURATION_LIMIT": {
-      "description": "Duration Limit for Playout (In Mins).. Example: 900",
-      "value": "900",
-      "required": true
-    },
-    "MONGO_DB_URI": {
-      "description": "Mongo DB URL",
-      "value": "",
-      "required": true
-    },
-    "MUSIC_BOT_NAME": {
-      "description": "A name for your Music Bot.",
-      "value": "Asad_Music_Bot",
-      "required": true
-    },
-    "SUPPORT_CHANNEL": {
-      "description": "Support Channel Link if you have any, Leave blank if no support. Your link must start with https://t.me/",
-      "value": "AsadSupport",
-      "required": false
-    },
-    "SUPPORT_GROUP": {
-      "description": "Support Group Link if you have any, Leave blank if no support. Your link must start with https://t.me/",
-      "value": "Shayri_Music_Lovers",
-      "required": false
-    },
-    "OWNER_ID": {
-      "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
-      "value": "1342820594",
-      "required": true
-    },
-    "STRING_SESSION1": {
-      "description": "A Pyrogram String Session. One Assistant is Compulsory.",
-      "value": "",
-      "required": true
-    },
-    "STRING_SESSION2": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
-      "value": "",
-      "required": false
-    },
-    "STRING_SESSION3": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
-      "value": "",
-      "required": false
-    },
-    "STRING_SESSION4": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
-      "value": "",
-      "required": false
-    },
-    "STRING_SESSION5": {
-      "description": "A Pyrogram String Session. Leave blank if you dont want Multi-Assistant",
-      "value": "",
-      "required": false
-    },
-    "HEROKU_API_KEY": {
-      "description": "Your Heroku account's API key",
-      "value": "",
-      "required": false
-    },
-    "HEROKU_APP_NAME": {
-      "description": "Your heroku app/bot's name",
-      "value": "",
-      "required": false
-    },
-    "LOG_GROUP_ID": {
-      "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Use only Group. Please don't use Channel ID.",
-      "value": "-1001717283097",
-      "required": true
-    },
-    "SUDO_USERS": {
-      "description": "The user id(s) of user(s) whom you would like to add as a SUDO. Multiple values shall be seperated with a space.",
-      "value": "",
-      "required": true
-    },
-    "LOG_SESSION": {
-      "description": "A Pyrogram String Session for LOGGING or u can also add STRING_SESSION1 Also.",
-      "value": "",
-      "required": true
-    },
-    "UPSTREAM_REPO": {
-      "description": "If you dont know this, Leave as it is",
-      "value": "https://github.com/jankarikiduniya/AlexaMusic",
-      "required": true
-    },
-    "UPSTREAM_BRANCH": {
-      "description": "Repo's Branch Name",
-      "value": "main",
-      "required": true
-    }
-  },
-  "buildpacks": [
-        {
-            "url": "heroku/python"
-        },
-        {
-            "url": "heroku/nodejs"
-        },
-        {
-            "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
-        }
     ],
-    "formation": {
-        "worker": {
-            "quantity": 1,
-            "size": "eco"
-        }
+    "stack": "container",
+    "env": {
+      "API_ID": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "",
+        "required": true
+      },
+      "API_HASH": {
+        "description": "Get this value from https://my.telegram.org",
+        "value": "",
+        "required": true
+      },
+      "AUTO_LEAVING_ASSISTANT": {
+        "description": "If you want your assistant to leave all chats automatically after some time.",
+        "value": "True",
+        "required": true
+      },
+      "BOT_TOKEN": {
+        "description": "A Bot's token from Botfather",
+        "value": "",
+        "required": true
+      },
+      "MONGO_DB_URI": {
+        "description": "Get a mongodb url from https://cloud.mongodb.com . You can leave it blank if you want , bot will use Ramdi's database for you.",
+        "value": "",
+        "required": true
+      },
+      "MUSIC_BOT_NAME": {
+        "description": "A name for your Music Bot. You can use special characters bot ko jhaat farak ni padega",
+        "value": "⁪⁬",
+        "required": true
+      },
+      "OWNER_ID": {
+        "description": "The user id(s) of user(s) whom you would like to add as a OWNER. Multiple values shall be seperated with a space.",
+        "value": "5463205082",
+        "required": true
+      },
+      "STRING_SESSION": {
+        "description": "A Pyrogram String Session. One Assistant is Compulsory.",
+        "value": "",
+        "required": true
+      },
+      "SUPPORT_GROUP": {
+        "description": "Your Support Group link ",
+        "value": "https://t.me/Best_FriendsFor_Ever",
+        "required": false
+      },
+      "SUPPORT_CHANNEL": {
+        "description": "Your Updates Channel link",
+        "value": "https://t.me/Star_X_Network",
+        "required": false
+      },
+      "PING_IMG_URL": {
+        "description": "The pic which will be shown when you give the /ping cmd to the bot.",
+        "value": "",
+        "required": false
+      },
+      "START_IMG_URL": {
+        "description": "The pic which will be shown when you /start the bot in private.",
+        "value": "",
+        "required": false
+      },
+      "HEROKU_API_KEY": {
+        "description": "Your Heroku account's API key",
+        "value": "",
+        "required": false
+      },
+      "HEROKU_APP_NAME": {
+        "description": "Your heroku app/bot's name",
+        "value": "",
+        "required": false
+      },
+      "LOG_GROUP_ID": {
+        "description": "Your Log Group ID, add your bot and promote as an admin with full rights!. Channel ki id mat daal dena bsdk.",
+        "value": "",
+        "required": true
+      },
+      "UPSTREAM_REPO": {
+        "description": "If you dont know this, Leave as it is",
+        "value": "https://github.com/its-star-boi/ShizukaXMusic",
+        "required": true
+      },
+      "UPSTREAM_BRANCH": {
+        "description": "Upstream Repo's Branch Name",
+        "value": "main",
+        "required": true
+      }
     },
-    "stack": "container"
-}
+    "buildpacks": [
+          {
+              "url": "heroku/python"
+          },
+          {
+              "url": "heroku/nodejs"
+          },
+          {
+              "url": "https://github.com/jonathanong/heroku-buildpack-ffmpeg-latest.git"
+          }
+      ],
+      "formation": {
+          "worker": {
+              "quantity": 1,
+              "size": "Eco"
+          }
+      },
+      "stack": "container"
+  }
